# Styleroom_Demo

./: .env  Dockerfile  Makefile  compose.yaml  main.py  pyproject.toml
pages/: 1_pose.py  2_avatar.py  3_garment.py  4_fitting.py
utilities/: common.py
utilities/avatar/: components.py
utilities/fitting/: clickable_image.py  components.py
utilities/garment/: components.py
utilities/pose/: components.py
